# CQS_MVP

./: README.md  airflow.cfg  airflow.db  dbt_project.yml  pyproject.toml  standalone_admin_password.txt
.dbt/: .user.yml  profiles.yml
.dbt/models/marts/: fct_technical_indicators.sql
.dbt/models/price_history/: schema_price_history.yml  src_price_history.yml  stg_price_history_no_duplicates.sql
.dbt/tests/: assert_composite_key_unique.sql  assert_high_greater_than_low.sql
.github/workflows/: build.yml  deploy.yml  main.yml
analysis/: backtest_engine_for_buy_dips.py  backtest_engine_for_sma_cross.py
analysis/strategies/: buy_dips.py  periodic_baseline.py  sma_cross.py
dags/: injest_alpaca_bars.py  test_dag.py
dags/util/core/alpaca/: alpaca_actions.py
dags/util/core/calendar/: calendar_util.py
dags/util/core/watchlist/: watchlist_helpers.py
local/: airflow.db
stock_lists/exchanges/: nasdaq_stocks_04-17-24.csv  nyse_stocks_04-17-24.csv
stock_lists/watchlist/: watchlist_.txt
tests/: test_alpaca_actions.py  test_calendar_utils.py
tests/files_for_testing/: alpaca_supported_tickers.csv
util/core/watchlist/: watchlist_helpers.py
