[tool.poetry]
name = "cqs-mvp"
version = "0.1.0"
description = ""
authors = ["Joey Fallon <fallonjoey1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.9.0"
alpaca-py = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
