[tool.poetry]
name = "cqs-mvp"
version = "0.1.0"
description = ""
authors = ["Joey Fallon <fallonjoey1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.9.0"
alpaca-py = "^0.20.3"
pandas = "^2.2.2"
google-cloud = "^0.34.0"
google-cloud-bigquery = "3.23.0"
pyarrow = "16.1.0"
google-cloud-storage = "^2.16.0"
gcsfs = "^2024.6.0"
pandas-market-calendars = "^4.4.0"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
dbt-core = "^1.8.3"
dbt-bigquery = "^1.8.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
